# jonq

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTIONS.md  README.md  SYNTAX.md  USAGE.md  build.sh  changelog  pyproject.toml  upload.sh
.github/ISSUE_TEMPLATE/: config.yml  jq-command.yml  json-edge-case.yml  workflow-request.yml
.github/workflows/: release.yml
docs/: requirements.txt
docs/source/: api.rst  comparison.rst  conf.py  contribution.rst  cookbook.rst  examples.rst  index.rst  installation.rst  usage.rst  usage_in_python.rst
jonq/: __init__.py  __main__.py  api.py  ast.py  constants.py  csv_utils.py  error_handler.py  executor.py  generator.py  jq_filter.py  jq_worker_cli.py  json_utils.py  main.py  parser.py  query_parser.py  stream_utils.py  table_utils.py  tokenizer.py  utils.py
tests/: benchmark.py  jq_api_test.py  jq_executor_streaming.py  jq_executor_test.py  jq_filter_test.py  jq_having_test.py  jq_main_test.py  jq_query_parser_test.py  jq_stream_utils.py  jq_tokenizer.py  test_generator_edge_cases.py  test_main_edge_cases.py  test_manual.sh  test_new_features.py  test_parser_edge_cases.py  test_query_parser_edge_cases.py  test_sample_query.sh  test_semantic_regressions.py  test_table_utils_edge_cases.py  test_tokenizer.py
tests/json_test_files/: all.json  smoke.json  test_manual_new.sh
