[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "jonq"
version = "0.3.2"
description = "Readable jq for JSON extraction and exploration"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "orjson>=3.8.0",
    "aiofiles"
]
license = {text = "MIT"}
authors = [
    {name = "oha", email = "aaronoh2015@gmail.com"},
]
keywords = [
    "json", "jq", "cli", "query", "sql",
    "json-query", "json-cli", "json-tool", "json-parser",
    "jq-alternative", "jq-wrapper", "jq-frontend",
    "command-line", "terminal", "data-extraction",
    "ndjson", "jsonl", "csv", "yaml",
    "api", "log-analysis", "devtools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Filters",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
jonq = "jonq.main:entrypoint"

[project.urls]
"Homepage" = "https://github.com/duriantaco/jonq"
"Documentation" = "https://jonq.readthedocs.io"
"Changelog" = "https://github.com/duriantaco/jonq/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/duriantaco/jonq/issues"

[tool.hatch.build.targets.wheel]
packages = ["jonq"]

[project.optional-dependencies]
dev = [
    "build",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "twine",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "myst-parser",
]

[tool.ruff]
target-version = "py39"
extend-exclude = [
    "docs/build",
]

[tool.ruff.lint]
select = ["E9", "F"]
